src/test/resources/typeSystemTestModels/valid/methods/Methods.java
package typeSystemTestModels.valid.methods;

public class Methods {

  public void publicMethod() {
  }
  
  protected void protectedMethod() {
  }
  
  private void privateMethod() {
  }
  
  void defaultMethod() {
  }

}