src/test/resources/typeSystemTestModels/invalid/classes/NoProtectedOrPrivateTopLevelClass.java
package typeSystemTestModels.invalid.classes;

private class NoProtectedOrPrivateTopLevelClass {


}
